비회원 기능 추가 및 권한, 경로 수정